<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/profile_header"
            android:layout_width="171dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="214dp"
            android:text="@string/profile_header"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_header"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="229dp"
            android:ems="10"
            android:labelFor="@id/editTextTextEmailAddress"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/email_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="179dp"
            android:autofillHints="vitaliy@gmail.com"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="vitaliy@gmail.com" />


        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logoutBtnText"/>
    </RelativeLayout>
</FrameLayout>